Refactor Admin to AdminUser.

--- a/app/views/ants/_profile.html.erb
+++ b/app/views/ants/_profile.html.erb
@@ -1,9 +1,10 @@
 <div class="sidebar-profile" style="display:none;">
-  <%= image_tag current_admin._list_item_thumbnail %>
+  <% user = current_admin_user %>
+  <%= image_tag user._list_item_thumbnail %>
 
-  <% name = (current_admin.name.presence || "").strip.split(' ').first %>
-  <% path = "#/settings/admins/view/#{current_admin.id}" %>
+  <% name = (user.name.presence || "").strip.split(' ').first %>
+  <% path = "#/settings/admins/view/#{user.id}" %>
   <%= link_to name, path %>
 
-  <%= link_to "Sign out", destroy_admin_session_path, method: :delete %>
+  <%= link_to "Sign out", destroy_admin_user_session_path, method: :delete %>
 </div>
