Update left padding for menu links.

--- a/app/assets/stylesheets/ants/settings.scss
+++ b/app/assets/stylesheets/ants/settings.scss
@@ -45,3 +45,12 @@
     }
   }
 }
+
+/* Tablet ------------------------------------------------------------------ */
+@media #{$tablet} {
+  .view-menu {
+    .nested-forms {
+      padding-left: 0;
+    }
+  }
+}
