--- a/app/assets/stylesheets/ants/settings.scss
+++ b/app/assets/stylesheets/ants/settings.scss
@@ -41,7 +41,7 @@
     input {
       font-size: 0.9em;
       padding-right: 5em;
-      opacity: 0.75;
+      color: $secondary-font-color;
     }
   }
 }
